[gd_scene load_steps=7 format=3 uid="uid://boexpb3ec15bw"]

[ext_resource type="Script" path="res://Game/Enemy/Enemy.gd" id="1_ucc0y"]
[ext_resource type="Material" uid="uid://diyem8fdqlhpn" path="res://Game/Enemy/Enemy_Rest_Material.tres" id="2_fxj7p"]
[ext_resource type="PackedScene" uid="uid://c8gn1shw17ye7" path="res://Game/Stats.tscn" id="3_ji1as"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4mq17"]
radius = 0.45

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c4wy8"]
radius = 0.35
height = 1.88326

[sub_resource type="CylinderShape3D" id="CylinderShape3D_861oe"]
height = 1.0
radius = 1.5

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 2, 0)
collision_layer = 2
collision_mask = 6
script = ExtResource("1_ucc0y")

[node name="Body" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_4mq17")
surface_material_override/0 = ExtResource("2_fxj7p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c4wy8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
radius = 1.0
debug_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="PathUpdateTimer" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Stats" parent="." instance=ExtResource("3_ji1as")]

[node name="AttackRadius" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRadius"]
shape = SubResource("CylinderShape3D_861oe")

[connection signal="timeout" from="Timers/PathUpdateTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="die_signal" from="Stats" to="." method="_on_stats_die_signal"]
